[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xdart"
version = "0.20.0"
description = "A pyFAI-based GUI for X-ray diffraction data reduction and visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vivek Thampy", email = "vthampy@stanford.edu"},
]
keywords = ["xrd", "diffraction", "pyFAI", "SSRL", "synchrotron", "GUI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ssrl_xrd_tools>=0.2.0",
    "numpy",
    "scipy",
    "h5py",
    "hdf5plugin",
    "fabio",
    "silx",
    "pyFAI",
    "xrayutilities",
    "PySide6>=6.5",
    "pyqtgraph>=0.13.7",
    "pandas",
    "lmfit",
    "pyyaml",
    "matplotlib",
    "joblib",
    "natsort",
    "imagecodecs",
    "imageio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.scripts]
xdart = "xdart.xdart_main:main"

[project.urls]
Homepage = "https://github.com/v-thampy/xdart"
Repository = "https://github.com/v-thampy/xdart"
Issues = "https://github.com/v-thampy/xdart/issues"

[tool.setuptools.packages.find]
where = ["."]
