[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "xdart"
version = "1.1.0"
description = "SSRL X-ray diffraction toolkit: headless reduction core (xrd_tools) + Qt GUI (xdart)"
readme = "README.md"
# SPDX expression (PEP 639): first-party code is MIT (see LICENSE); the
# ssrl_xrd_tools-provenance code is BSD-3-Clause (licenses/LICENSE-ssrl_xrd_tools).
license = "MIT AND BSD-3-Clause"
license-files = ["licenses/LICENSE-*", "LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Vivek Thampy", email = "vthampy@stanford.edu"},
]
keywords = ["xrd", "diffraction", "pyFAI", "SSRL", "synchrotron", "GUI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# Slim base: heavy analysis deps stay in extras (pymatgen drags
# sympy/spglib/monty; xrayutilities is compiled).  Lazy imports give the
# friendly "pip install xdart[fitting]" error instead.
dependencies = [
    "numpy",
    "scipy",
    "pandas",            # core/scan.py + reduction/core.py import it directly
    "xarray",
    "h5py",
    # Registers HDF5 dynamic filters (bitshuffle/lz4): needed by the HEADLESS
    # reader to load Dectris Eiger data and to read/write lz4-compressed
    # integrated stacks.  Lightweight, so kept in the base deps (not just GUI).
    "hdf5plugin",
    "nexusformat",
    "fabio",
    "silx",              # io.spec / io.metadata SPEC parsing
    # pyFAI 2025.12 ships a broken pyFAI-calib2 on Windows (silx.gui import
    # path / qt plugin issue); cap to <2025.12 until fixed upstream.
    # There are no pyFAI releases between 2025.3.0 and 2025.12.0, so this
    # range selects exactly 2025.3.0 (the tested version).
    "pyFAI>=2025.3,<2025.12",
    "pyyaml",            # core/hdf5.py imports yaml directly
    "joblib",
    "natsort",
    "matplotlib",        # viz.mpl (consider lazy viz import later)
    "plotly",            # viz.plotly (same)
]

[project.optional-dependencies]
fitting = ["lmfit", "pymatgen"]
rsm = ["xrayutilities", "pyevtk"]
gui = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13.7",
    # silx.gui.plot pulls qtawesome at import time (pyFAI-calib2 /
    # drawmask path) but silx doesn't declare it.
    "qtawesome",
    "imagecodecs",
    "imageio",
    "packaging",         # Help → Check for Updates… version comparison (updater.py)
    # GUI analysis tools: Peak/Phase Fitting (lmfit, pymatgen) + the Grazing/GI/RSM
    # workflow (xrayutilities, pyevtk).  The GUI surfaces these from the Tools menu
    # and the Grazing corrections path, so a `[gui]` install ships them.
    "xdart[fitting,rsm]",
]
notebook = ["ipywidgets", "anywidget", "ipyfilechooser", "ipykernel", "ipympl", "jupyterlab"]
all = ["xdart[fitting,rsm,gui,notebook]"]
dev = ["pytest", "pytest-timeout", "build", "twine", "tifffile"]  # tifffile: test fixtures write TIFFs

[project.scripts]
xdart = "xdart.xdart_main:main"

[project.urls]
Homepage = "https://github.com/v-thampy/xdart"
Repository = "https://github.com/v-thampy/xdart"
Issues = "https://github.com/v-thampy/xdart/issues"
Changelog = "https://github.com/v-thampy/xdart/blob/main/MIGRATION.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xrd_tools*", "xdart*", "ssrl_xrd_tools*"]

[tool.setuptools.package-data]
xdart = ["**/*.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "display_logic: pure, Qt-free display-decision tests (no Qt/pyFAI/h5py needed). Run with `pytest -m display_logic`.",
    "gui: end-to-end tests that build real Qt widgets (need QT_QPA_PLATFORM=offscreen). Run/skip with `pytest -m gui` / `-m 'not gui'`.",
    "slow: heavy/full-size detector cases. Skip with `pytest -m 'not slow'`.",
]
filterwarnings = [
    # Upstream pyFAI 2025/2026 noise: deprecated ndarray.strides setter
    # (NumPy 2.4 deprecation).  Not actionable here.
    "ignore:Setting the strides on a NumPy array has been deprecated:DeprecationWarning:pyFAI",
]

# ---------------------------------------------------------------------------
# Pixi dev workspace (optional; the `[tool.pixi.*]` tables are ignored by the
# build backend, so they do NOT affect the sdist/wheel or the conda package).
#
#   pixi install       # create ./.pixi env: conda python + THIS project editable
#   pixi run xdart      # launch the EDITABLE build -- src/ changes are live
#   pixi run test       # headless core tests
#
# `pixi run xdart` runs this editable install, NOT a pixi-global `xdart`, so a
# dev build and the released global stop shadowing each other (which is what
# made `which xdart` resolve to the global binary during development).
#
# The GUI/analysis stack resolves from the project's own [gui]+[dev] extras
# (PyPI wheels); if you'd rather have conda-forge binaries for the heavy libs
# (pyFAI, PySide6, silx, h5py), add them under [tool.pixi.dependencies].
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "3.13.*"

[tool.pixi.pypi-dependencies]
xdart = { path = ".", editable = true, extras = ["gui", "dev"] }

[tool.pixi.tasks]
xdart = "xdart"
test = { cmd = "pytest tests/core -q", description = "run the headless core tests" }
gui-test = { cmd = "pytest tests/xdart -q -p no:faulthandler", env = { QT_QPA_PLATFORM = "offscreen" }, description = "run the offscreen GUI tests" }
