[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrl_xrd_tools"
version = "0.38.3.dev0"
description = "SSRL X-ray diffraction data processing and visualization tools"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Vivek Thampy", email = "vthampy@stanford.edu"},
]
keywords = ["xrd", "diffraction", "pyFAI", "SSRL", "synchrotron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# Headless / batch-processing core.  Anything required by the
# import-time chain of ssrl_xrd_tools.{core,io,integrate,viz} belongs here.
# Domain-specific optional packages live under [project.optional-dependencies].
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "h5py",
    "nexusformat",
    "fabio",
    "silx",
    "pyFAI>=2025.3,<2026",
    "joblib",
    "natsort",
    # Plotting libraries (used by viz.mpl / viz.plotly — viz/__init__.py
    # imports both eagerly).  Both render headless, neither requires
    # Jupyter or a GUI toolkit at import time.
    "matplotlib",
    "plotly",
]

[project.optional-dependencies]
# Phase / peak fitting (analysis.fitting.*).
fitting = ["lmfit", "pymatgen"]

# Reciprocal-space mapping (rsm.*).  xrayutilities is the
# Ang2Q / Gridder3D backend; pyevtk is for VTK export from RSMVolume.
rsm = ["xrayutilities", "pyevtk"]

# Interactive Jupyter widgets (gui.widgets.*).  ipywidgets +
# plotly.FigureWidget for in-place updates; anywidget / ipyfilechooser
# are convenience deps used by a handful of widgets.  (``plotly`` itself
# is base because viz/__init__.py loads it eagerly; the widgets layer
# adds the Jupyter-render side on top.)
gui = [
    "ipywidgets",
    "anywidget",
    "ipyfilechooser",
]

# Self-contained Jupyter environment (kernel + JupyterLab).  Useful
# for users who want `pip install ssrl_xrd_tools[notebook,gui]` to give
# them a working notebook out of the box.
notebook = ["ipykernel", "jupyterlab"]

# napari-based 3D viewer for RSM volumes.  The napari dependency is
# intentionally NOT declared yet — the viewer (gui/napari_viewer.py) is a
# stub and nothing imports napari.  Re-add ``napari = ["napari"]`` here (and
# put it back into ``all`` and environment.yml) when the RSM 3D viewer is
# actually wired up.

# Tiled client for streaming live data.
tiled = ["tiled[client]"]

# Standalone VTK export utility (rsm[vtk] is preferred; kept for
# back-compat).
vtk = ["pyevtk"]

# Convenience: install everything except dev.
all = [
    "ssrl_xrd_tools[fitting,rsm,gui,notebook,tiled]",
]

dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/v-thampy/ssrl_xrd_tools"
Repository = "https://github.com/v-thampy/ssrl_xrd_tools"
Issues = "https://github.com/v-thampy/ssrl_xrd_tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssrl_xrd_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: tests that use full-size detector images or expensive integrations",
]
